@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<install type="module" version="1.0.0">
+<install type="module" version="1.6.0">
 	<name>Toolbar</name>
 	<author>Joomla! Project</author>
 	<creationDate>Nov 2005</creationDate>
